gcc/testsuite/g++.dg/other/main3.C
inline int main();  // { dg-error "1:cannot declare .::main. to be inline" }
